--- a/simple-ecommerce/Views/Shared/_Layout.cshtml
+++ b/simple-ecommerce/Views/Shared/_Layout.cshtml
@@ -229,7 +229,7 @@
                                             <ul class="minicart-product-list">
                                                 <li>
                                                     <a href="single-product.html" class="minicart-product-image">
-                                                        <img src="images/product/small-size/5.jpg" alt="cart products">
+                                                        <img src="~/images/product/small-size/5.jpg" alt="cart products">
                                                     </a>
                                                     <div class="minicart-product-details">
                                                         <h6><a href="single-product.html">Aenean eu tristique</a></h6>
@@ -241,7 +241,7 @@
                                                 </li>
                                                 <li>
                                                     <a href="single-product.html" class="minicart-product-image">
-                                                        <img src="images/product/small-size/6.jpg" alt="cart products">
+                                                        <img src="~/images/product/small-size/6.jpg" alt="cart products">
                                                     </a>
                                                     <div class="minicart-product-details">
                                                         <h6><a href="single-product.html">Aenean eu tristique</a></h6>
@@ -447,7 +447,7 @@
                             <!-- Begin Footer Logo Area -->
                             <div class="col-lg-4 col-md-6">
                                 <div class="footer-logo">
-                                    <img src="images/menu/logo/1.jpg" alt="Footer Logo">
+                                    <img src="~/images/menu/logo/1.jpg" alt="Footer Logo">
                                     <p class="info">
                                         We are a team of designers and developers that create high quality HTML Template & Woocommerce, Shopify Theme.
                                     </p>
@@ -567,31 +567,31 @@
                                 <div class="product-details-left">
                                     <div class="product-details-images slider-navigation-1">
                                         <div class="lg-image">
-                                            <img src="images/product/large-size/1.jpg" alt="product image">
+                                            <img src="~/images/product/large-size/1.jpg" alt="product image">
                                         </div>
                                         <div class="lg-image">
-                                            <img src="images/product/large-size/2.jpg" alt="product image">
+                                            <img src="~/images/product/large-size/2.jpg" alt="product image">
                                         </div>
                                         <div class="lg-image">
-                                            <img src="images/product/large-size/3.jpg" alt="product image">
+                                            <img src="~/images/product/large-size/3.jpg" alt="product image">
                                         </div>
                                         <div class="lg-image">
-                                            <img src="images/product/large-size/4.jpg" alt="product image">
+                                            <img src="~/images/product/large-size/4.jpg" alt="product image">
                                         </div>
                                         <div class="lg-image">
-                                            <img src="images/product/large-size/5.jpg" alt="product image">
+                                            <img src="~/images/product/large-size/5.jpg" alt="product image">
                                         </div>
                                         <div class="lg-image">
-                                            <img src="images/product/large-size/6.jpg" alt="product image">
+                                            <img src="~/images/product/large-size/6.jpg" alt="product image">
                                         </div>
                                     </div>
                                     <div class="product-details-thumbs slider-thumbs-1">
-                                        <div class="sm-image"><img src="images/product/small-size/1.jpg" alt="product image thumb"></div>
-                                        <div class="sm-image"><img src="images/product/small-size/2.jpg" alt="product image thumb"></div>
-                                        <div class="sm-image"><img src="images/product/small-size/3.jpg" alt="product image thumb"></div>
-                                        <div class="sm-image"><img src="images/product/small-size/4.jpg" alt="product image thumb"></div>
-                                        <div class="sm-image"><img src="images/product/small-size/5.jpg" alt="product image thumb"></div>
-                                        <div class="sm-image"><img src="images/product/small-size/6.jpg" alt="product image thumb"></div>
+                                        <div class="sm-image"><img src="~/images/product/small-size/1.jpg" alt="product image thumb"></div>
+                                        <div class="sm-image"><img src="~/images/product/small-size/2.jpg" alt="product image thumb"></div>
+                                        <div class="sm-image"><img src="~/images/product/small-size/3.jpg" alt="product image thumb"></div>
+                                        <div class="sm-image"><img src="~/images/product/small-size/4.jpg" alt="product image thumb"></div>
+                                        <div class="sm-image"><img src="~/images/product/small-size/5.jpg" alt="product image thumb"></div>
+                                        <div class="sm-image"><img src="~/images/product/small-size/6.jpg" alt="product image thumb"></div>
                                     </div>
                                 </div>
                                 <!--// Product Details Left -->
