--- a/simple-ecommerce/Views/Shared/_Layout.cshtml
+++ b/simple-ecommerce/Views/Shared/_Layout.cshtml
@@ -230,18 +230,9 @@
                                     <!-- Header Middle Wishlist Area End Here -->
                                     <!-- Begin Header Mini Cart Area -->
                                     <li class="hm-minicart">
-                                        <a asp-controller="Cart" asp-action="Index">
-                                        <div  class="hm-minicart-trigger">
-                                            <span class="item-icon"></span>
-                                            <span class="item-text">
-                                                <span id="cart-total">@totalAmount</span>
-                                                <span id="cart-count" class="cart-item-count">@totalItems</span>
-                                            </span>
-                                           
+                                        <div id="cart-summary-container">
+                                            @await Component.InvokeAsync("CartSummary")
                                         </div>
-                                        </a>
-                                        <span></span>
-                                     
                                     </li>
                                     <!-- Header Mini Cart Area End Here -->
                                 </ul>
@@ -537,7 +528,7 @@
     </div>
     <!-- Body Wrapper End Here -->
     <!-- jQuery-V1.12.4 -->
-    <script src="/js/vendor/jquery-1.12.4.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <!-- Popper js -->
     <script src="/js/vendor/popper.min.js"></script>
     <!-- Bootstrap V4.1.3 Fremwork js -->
