--- a/simple-ecommerce/Views/Cart/Index.cshtml
+++ b/simple-ecommerce/Views/Cart/Index.cshtml
@@ -34,9 +34,7 @@
                                             <td class="quantity">
                                                 <label>Quantity</label>
                                                 <div class="cart-plus-minus">
-                                                    <input class="cart-plus-minus-box" value="@item.Quantity" min="1" type="number">
-                                                    <div class="dec qtybutton"><i class="fa fa-angle-down"></i></div>
-                                                    <div class="inc qtybutton"><i class="fa fa-angle-up"></i></div>
+                                                    <input class="cart-plus-minus-box" value="@item.Quantity" onchange="onQuatityChange(@item.ProductId,this)" min="1" type="number">
                                                 </div>
                                             </td>
                                             <td class="product-subtotal"><span class="amount">$@item.Total</span></td>
@@ -53,7 +51,7 @@
                                     <input class="button" name="apply_coupon" value="Apply coupon" type="submit">
                                 </div>
                                 <div class="coupon2">
-                                    <input class="button" name="update_cart" value="Update cart" type="submit">
+                                        <input class="button" type="button" name="Clear_cart" value="Clear cart" asp-action="Clear">
                                 </div>
                             </div>
                         </div>
@@ -76,3 +74,16 @@
         </div>
     </div>
 </div>
+
+<script>
+    function onQuatityChange(productId,ele)
+    {
+        let quantity= $(ele).val();
+        $.ajax({
+        url: '/Cart/Update',
+        type: 'POST',
+        contentType: 'application/json',
+        data: JSON.stringify({ id: productId, quantity: quantity })
+    });
+    }
+</script>
