--- a/simple-ecommerce/Views/Shared/_Layout.cshtml
+++ b/simple-ecommerce/Views/Shared/_Layout.cshtml
@@ -522,7 +522,7 @@
     </div>
     <!-- Body Wrapper End Here -->
     <!-- jQuery-V1.12.4 -->
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="/js/vendor/jquery-1.12.4.min.js"></script>
     <!-- Popper js -->
     <script src="/js/vendor/popper.min.js"></script>
     <!-- Bootstrap V4.1.3 Fremwork js -->
