--- a/simple-ecommerce/Views/Cart/Index.cshtml
+++ b/simple-ecommerce/Views/Cart/Index.cshtml
@@ -35,7 +35,7 @@
                                             <td class="quantity">
                                                 <label>Quantity</label>
                                                 <div class="cart-plus-minus">
-                                                    <input class="cart-plus-minus-box" value="@item.Quantity" onchange="onQuatityChange(@item.ProductId,this)" min="1" type="number">
+                                                    <input class="cart-plus-minus-box" data-id="@item.ProductId" value="@item.Quantity" min="1" type="number">
                                                     <div class="dec qtybutton"><i class="fa fa-angle-down"></i></div>
                                                     <div class="inc qtybutton"><i class="fa fa-angle-up"></i></div>
                                                 </div>
