--- a/simple-ecommerce/Views/Checkout/Index.cshtml
+++ b/simple-ecommerce/Views/Checkout/Index.cshtml
@@ -1,4 +1,5 @@
-﻿    <!--Checkout Area Strat-->
+﻿@model List<CartItemViewModel>
+<!--Checkout Area Strat-->
 <div class="checkout-area pt-60 pb-30">
     <div class="container">
         <div class="row">
@@ -77,17 +78,6 @@
                                 <div class="checkout-form-list">
                                     <label>Phone  <span class="required">*</span></label>
                                     <input type="text">
-                                </div>
-                            </div>
-                            <div class="col-md-12">
-                                <div class="checkout-form-list create-acc">
-                                    <input id="cbox" type="checkbox">
-                                    <label>Create an account?</label>
-                                </div>
-                                <div id="cbox-info" class="checkout-form-list create-account">
-                                    <p>Create an account by entering the information below. If you are a returning customer please login at the top of the page.</p>
-                                    <label>Account password  <span class="required">*</span></label>
-                                    <input placeholder="password" type="password">
                                 </div>
                             </div>
                         </div>
@@ -194,78 +184,29 @@
                                 </tr>
                             </thead>
                             <tbody>
+                                 @foreach (var item in Model)
+                                    {
                                 <tr class="cart_item">
-                                    <td class="cart-product-name"> Vestibulum suscipit<strong class="product-quantity"> × 1</strong></td>
-                                    <td class="cart-product-total"><span class="amount">£165.00</span></td>
+                                    <td class="cart-product-name"> @item.ProductName<strong class="product-quantity"> × @item.Quantity</strong></td>
+                                    <td class="cart-product-total"><span class="amount">$@item.Total</span></td>
                                 </tr>
-                                <tr class="cart_item">
-                                    <td class="cart-product-name"> Vestibulum suscipit<strong class="product-quantity"> × 1</strong></td>
-                                    <td class="cart-product-total"><span class="amount">£165.00</span></td>
-                                </tr>
+                                    }
                             </tbody>
                             <tfoot>
                                 <tr class="cart-subtotal">
                                     <th>Cart Subtotal</th>
-                                    <td><span class="amount">£215.00</span></td>
+                                    <td><span class="amount">$@Model.Sum(x => x.Total)</span></td>
                                 </tr>
                                 <tr class="order-total">
                                     <th>Order Total</th>
-                                    <td><strong><span class="amount">£215.00</span></strong></td>
+                                    <td><strong><span class="amount">$@Model.Sum(x => x.Total)</span></strong></td>
                                 </tr>
                             </tfoot>
                         </table>
                     </div>
-                    <div class="payment-method">
-                        <div class="payment-accordion">
-                            <div id="accordion">
-                                <div class="card">
-                                    <div class="card-header" id="#payment-1">
-                                        <h5 class="panel-title">
-                                            <a class="" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                                Direct Bank Transfer.
-                                            </a>
-                                        </h5>
-                                    </div>
-                                    <div id="collapseOne" class="collapse show" data-parent="#accordion">
-                                        <div class="card-body">
-                                            <p>Make your payment directly into our bank account. Please use your Order ID as the payment reference. Your order won’t be shipped until the funds have cleared in our account.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="card">
-                                    <div class="card-header" id="#payment-2">
-                                        <h5 class="panel-title">
-                                            <a class="collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                                Cheque Payment
-                                            </a>
-                                        </h5>
-                                    </div>
-                                    <div id="collapseTwo" class="collapse" data-parent="#accordion">
-                                        <div class="card-body">
-                                            <p>Make your payment directly into our bank account. Please use your Order ID as the payment reference. Your order won’t be shipped until the funds have cleared in our account.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="card">
-                                    <div class="card-header" id="#payment-3">
-                                        <h5 class="panel-title">
-                                            <a class="collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                                PayPal
-                                            </a>
-                                        </h5>
-                                    </div>
-                                    <div id="collapseThree" class="collapse" data-parent="#accordion">
-                                        <div class="card-body">
-                                            <p>Make your payment directly into our bank account. Please use your Order ID as the payment reference. Your order won’t be shipped until the funds have cleared in our account.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="order-button-payment">
-                                <input value="Place order" type="submit">
-                            </div>
-                        </div>
-                    </div>
+                   <div class="order-button-payment">
+                                            <input value="Place order" type="submit">
+                  </div>
                 </div>
             </div>
         </div>
