--- a/simple-ecommerce/Views/Home/Index.cshtml
+++ b/simple-ecommerce/Views/Home/Index.cshtml
@@ -30,7 +30,7 @@
                                 <!-- single-product-wrap start -->
                                 <div class="single-product-wrap">
                                     <div class="product-image">
-                                        <a href="single-product.html">
+                                        <a href="/Home/ProductDetails?id=@item.Id">
                                             <img src="/images/product/large-size/1.jpg" alt="Li's Product Image">
                                         </a>
                                         <span class="sticker">New</span>
@@ -51,7 +51,7 @@
                                                     </ul>
                                                 </div>
                                             </div>
-                                            <h4><a class="product_name" href="single-product.html">@item.Name</a></h4>
+                                            <h4><a class="product_name" href="/Home/ProductDetails?id=@item.Id">@item.Name</a></h4>
                                             <div class="price-box">
                                                 <span class="new-price">$@item.Price</span>
                                             </div>
@@ -61,7 +61,7 @@
                                                 <li class="add-cart active">
                                                     <a style="cursor:pointer" class="add-to-cart" data-id="@item.Id" data-name="@item.Name" data-price="@item.Price">Add to cart</a>
                                                 </li>
-                                                <li><a class="links-details" href="wishlist.html"><i class="fa fa-heart-o"></i></a></li>
+                                               
                                             </ul>
                                         </div>
                                     </div>
