--- a/simple-ecommerce/Views/Shared/_LayoutAdmin.cshtml
+++ b/simple-ecommerce/Views/Shared/_LayoutAdmin.cshtml
@@ -16,10 +16,10 @@
           rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
           rel="stylesheet">
-
+    <link href="/js/vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
     <!-- Custom styles for this template-->
     <link href="/css/sb-admin-2.min.css" rel="stylesheet">
-
+    <script src="/js/vendor/jquery-1.12.4.min.js"></script>
 </head>
 
 <body id="page-top">
@@ -50,7 +50,7 @@
             </li>
 
             <!-- Divider -->
-            <hr class="sidebar-divider">
+            <hr class="sidebar-divider"/>
 
             <!-- Heading -->
             <div class="sidebar-heading">
@@ -62,12 +62,12 @@
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
                    aria-expanded="true" aria-controls="collapseTwo">
                     <i class="fas fa-fw fa-cog"></i>
-                    <span>Components</span>
+                    <span>Catalog</span>
                 </a>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Components:</h6>
-                        <a class="collapse-item" href="buttons.html">Buttons</a>
+                        <h6 class="collapse-header">Category</h6>
+                        <a class="collapse-item" href="/Product/Index">Products</a>
                         <a class="collapse-item" href="cards.html">Cards</a>
                     </div>
                 </div>
@@ -397,8 +397,11 @@
 
    
     <!-- Bootstrap core JavaScript-->
-    <script src="/js/vendor/jquery-1.12.4.min.js"></script>
+  
     <script src="/js/bootstrap.min.js"></script>
+
+    <script src="/js/vendor/datatables/jquery.dataTables.min.js"></script>
+    <script src="/js/vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
     <!-- Custom scripts for all pages-->
     <script src="/js/sb-admin-2.min.js"></script>
