--- a/simple-ecommerce/Views/Product/Index.cshtml
+++ b/simple-ecommerce/Views/Product/Index.cshtml
@@ -3,7 +3,9 @@
     Layout = "_LayoutAdmin";
 }
 
-
+<div>
+<a class="btn btn-primary" asp-action="Create" asp-controller="Product">Create Product</a>
+</div>
 
 <div class="card shadow mb-4">
     <div class="card-header py-3">
