--- a/simple-ecommerce/Views/Checkout/Index.cshtml
+++ b/simple-ecommerce/Views/Checkout/Index.cshtml
@@ -3,12 +3,14 @@
 <div class="checkout-area pt-60 pb-30">
     <div class="container">
         <div class="row">
-            <div class="col-lg-6 col-12">
-                <form action="#">
+            <form action="/Home/PlaceOrder" method="post">
+                <div class="row">
+                    <div class="col-md-6 col-6">
+                
                     <div class="checkbox-form">
-                        <h3>Billing Details</h3>
+                        <h3>Shipping Details</h3>
                         <div class="row">
-                            <div class="col-md-12">
+@*                             <div class="col-md-12">
                                 <div class="country-select clearfix">
                                     <label>Country <span class="required">*</span></label>
                                     <select class="nice-select wide">
@@ -20,159 +22,72 @@
                                         <option value="aus">Australia</option>
                                     </select>
                                 </div>
-                            </div>
+                            </div> *@
                             <div class="col-md-6">
                                 <div class="checkout-form-list">
-                                    <label>First Name <span class="required">*</span></label>
-                                    <input placeholder="" type="text">
+                                    <label>Full Name <span class="required">*</span></label>
+                                    <input name="FullName" placeholder="" type="text">
                                 </div>
                             </div>
-                            <div class="col-md-6">
+@*                             <div class="col-md-6">
                                 <div class="checkout-form-list">
                                     <label>Last Name <span class="required">*</span></label>
                                     <input placeholder="" type="text">
                                 </div>
-                            </div>
-                            <div class="col-md-12">
+                            </div> *@
+@*                             <div class="col-md-12">
                                 <div class="checkout-form-list">
                                     <label>Company Name</label>
                                     <input placeholder="" type="text">
                                 </div>
-                            </div>
+                            </div> *@
                             <div class="col-md-12">
                                 <div class="checkout-form-list">
                                     <label>Address <span class="required">*</span></label>
-                                    <input placeholder="Street address" type="text">
+                                    <input name="AddressLine" placeholder="Street address" type="text">
                                 </div>
                             </div>
-                            <div class="col-md-12">
+                        @*     <div class="col-md-12">
                                 <div class="checkout-form-list">
                                     <input placeholder="Apartment, suite, unit etc. (optional)" type="text">
                                 </div>
-                            </div>
+                            </div> *@
                             <div class="col-md-12">
                                 <div class="checkout-form-list">
                                     <label>Town / City <span class="required">*</span></label>
-                                    <input type="text">
+                                    <input name="City" type="text">
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                          @*   <div class="col-md-6">
                                 <div class="checkout-form-list">
                                     <label>State / County <span class="required">*</span></label>
                                     <input placeholder="" type="text">
                                 </div>
-                            </div>
+                            </div> *@
                             <div class="col-md-6">
                                 <div class="checkout-form-list">
                                     <label>Postcode / Zip <span class="required">*</span></label>
-                                    <input placeholder="" type="text">
+                                    <input name="PostalCode" placeholder="" type="text">
                                 </div>
                             </div>
-                            <div class="col-md-6">
+@*                             <div class="col-md-6">
                                 <div class="checkout-form-list">
                                     <label>Email Address <span class="required">*</span></label>
                                     <input placeholder="" type="email">
                                 </div>
-                            </div>
+                            </div> *@
                             <div class="col-md-6">
                                 <div class="checkout-form-list">
                                     <label>Phone  <span class="required">*</span></label>
-                                    <input type="text">
+                                    <input name="Phone" type="text">
                                 </div>
                             </div>
                         </div>
-                        <div class="different-address">
-                            <div class="ship-different-title">
-                                <h3>
-                                    <label>Ship to a different address?</label>
-                                    <input id="ship-box" type="checkbox">
-                                </h3>
-                            </div>
-                            <div id="ship-box-info" class="row">
-                                <div class="col-md-12">
-                                    <div class="country-select clearfix">
-                                        <label>Country <span class="required">*</span></label>
-                                        <select class="nice-select wide">
-                                            <option data-display="Bangladesh">Bangladesh</option>
-                                            <option value="uk">London</option>
-                                            <option value="rou">Romania</option>
-                                            <option value="fr">French</option>
-                                            <option value="de">Germany</option>
-                                            <option value="aus">Australia</option>
-                                        </select>
-                                    </div>
-                                </div>
-                                <div class="col-md-12">
-                                    <div class="checkout-form-list">
-                                        <label>First Name <span class="required">*</span></label>
-                                        <input placeholder="" type="text">
-                                    </div>
-                                </div>
-                                <div class="col-md-12">
-                                    <div class="checkout-form-list">
-                                        <label>Last Name <span class="required">*</span></label>
-                                        <input placeholder="" type="text">
-                                    </div>
-                                </div>
-                                <div class="col-md-12">
-                                    <div class="checkout-form-list">
-                                        <label>Company Name</label>
-                                        <input placeholder="" type="text">
-                                    </div>
-                                </div>
-                                <div class="col-md-12">
-                                    <div class="checkout-form-list">
-                                        <label>Address <span class="required">*</span></label>
-                                        <input placeholder="Street address" type="text">
-                                    </div>
-                                </div>
-                                <div class="col-md-12">
-                                    <div class="checkout-form-list">
-                                        <input placeholder="Apartment, suite, unit etc. (optional)" type="text">
-                                    </div>
-                                </div>
-                                <div class="col-md-12">
-                                    <div class="checkout-form-list">
-                                        <label>Town / City <span class="required">*</span></label>
-                                        <input type="text">
-                                    </div>
-                                </div>
-                                <div class="col-md-12">
-                                    <div class="checkout-form-list">
-                                        <label>State / County <span class="required">*</span></label>
-                                        <input placeholder="" type="text">
-                                    </div>
-                                </div>
-                                <div class="col-md-12">
-                                    <div class="checkout-form-list">
-                                        <label>Postcode / Zip <span class="required">*</span></label>
-                                        <input placeholder="" type="text">
-                                    </div>
-                                </div>
-                                <div class="col-md-12">
-                                    <div class="checkout-form-list">
-                                        <label>Email Address <span class="required">*</span></label>
-                                        <input placeholder="" type="email">
-                                    </div>
-                                </div>
-                                <div class="col-md-12">
-                                    <div class="checkout-form-list">
-                                        <label>Phone  <span class="required">*</span></label>
-                                        <input type="text">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="order-notes">
-                                <div class="checkout-form-list">
-                                    <label>Order Notes</label>
-                                    <textarea id="checkout-mess" cols="30" rows="10" placeholder="Notes about your order, e.g. special notes for delivery."></textarea>
-                                </div>
-                            </div>
-                        </div>
+                       
                     </div>
-                </form>
+                
             </div>
-            <div class="col-lg-6 col-12">
+                    <div class="col-md-6 col-6">
                 <div class="your-order">
                     <h3>Your order</h3>
                     <div class="your-order-table table-responsive">
@@ -205,10 +120,12 @@
                         </table>
                     </div>
                    <div class="order-button-payment">
-                                            <input value="Place order" type="submit">
+                      <input value="Place order" type="submit">
                   </div>
                 </div>
             </div>
+                </div>    
+        </form>
         </div>
     </div>
 </div>
