last update pori

--- a/simple-ecommerce/Views/Shared/_Layout.cshtml
+++ b/simple-ecommerce/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 @using Microsoft.AspNetCore.Http
 
 @{
-    
+
 }
 
 <!doctype html>
@@ -52,7 +52,7 @@
 </head>
 <body>
     <!--[if lt IE 8]>
-        <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <!-- Begin Body Wrapper -->
     <div class="body-wrapper">
@@ -81,8 +81,16 @@
                                         <div class="setting ht-setting">
                                             <ul class="ht-setting-list">
                                                 <li><a href="login-register.html">My Account</a></li>
-                                                <li><a href="checkout.html">Checkout</a></li>
-                                                <li><a href="/Auth/Login">Sign In</a></li>
+                                                
+                                                @if (User.Identity?.IsAuthenticated == true)
+                                                {
+                                                    <li><a href="/auth/Logout">Sign Out</a></li>
+                                                }
+                                                else
+                                                {
+                                                    <li><a href="/Auth/Login">Sign In</a></li>
+                                                }
+                                                
                                             </ul>
                                         </div>
                                     </li>
@@ -248,13 +256,16 @@
                                 <nav>
                                     <ul>
                                         <li>
-                                            <a href="index.html">Home</a>
+                                            <a href="/">Home</a>
                                         </li>
                               
                                         <li><a href="/Home/About">About Us</a></li>
                                         <li><a href="/Home/ContactUs">Contact</a></li>
                                         <li><a href="shop-left-sidebar.html">Smartwatch</a></li>
-                                        <li><a href="shop-left-sidebar.html">Accessories</a></li>
+                                         @if(User.Identity?.IsAuthenticated == true && User.IsInRole("Admin"))
+                                         {
+                                        <li><a href="/Admin/Index">Dashboard</a></li>
+                                         }
                                     </ul>
                                 </nav>
                             </div>
