--- a/simple-ecommerce/Views/Shared/_LayoutAdmin.cshtml
+++ b/simple-ecommerce/Views/Shared/_LayoutAdmin.cshtml
@@ -68,7 +68,7 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Category</h6>
                         <a class="collapse-item" href="/Product/Index">Products</a>
-                        <a class="collapse-item" href="cards.html">Cards</a>
+                        <a class="collapse-item" href="/Category/Index">Category</a>
                     </div>
                 </div>
             </li>
