--- a/simple-ecommerce/Views/Category/Index.cshtml
+++ b/simple-ecommerce/Views/Category/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div>
-    <a class="btn btn-primary" asp-action="Create" asp-controller="Category">Category Product</a>
+    <a class="btn btn-primary" asp-action="Create" asp-controller="Category">Add Category</a>
 </div>
 
 <div class="card shadow mb-4">
