Home Global Search

--- a/simple-ecommerce/wwwroot/css/style.css
+++ b/simple-ecommerce/wwwroot/css/style.css
@@ -5431,6 +5431,10 @@ span.required {
 .small-version {
   display: none;
 }
+
+.add-to-cart{
+	cursor:pointer!important;
+}
 /*----------------------------------------------------------------------------------------------------*/
 /*------------------------------------------> The End <-----------------------------------------------*/
 /*----------------------------------------------------------------------------------------------------*/
