--- a/simple-ecommerce/Views/Checkout/Index.cshtml
+++ b/simple-ecommerce/Views/Checkout/Index.cshtml
@@ -26,7 +26,7 @@
                             <div class="col-md-6">
                                 <div class="checkout-form-list">
                                     <label>Full Name <span class="required">*</span></label>
-                                    <input name="FullName" placeholder="" type="text">
+                                        <input name="FullName" placeholder="" type="text" required>
                                 </div>
                             </div>
 @*                             <div class="col-md-6">
@@ -44,7 +44,7 @@
                             <div class="col-md-12">
                                 <div class="checkout-form-list">
                                     <label>Address <span class="required">*</span></label>
-                                    <input name="AddressLine" placeholder="Street address" type="text">
+                                        <input name="AddressLine" placeholder="Street address" required type="text">
                                 </div>
                             </div>
                         @*     <div class="col-md-12">
@@ -55,7 +55,7 @@
                             <div class="col-md-12">
                                 <div class="checkout-form-list">
                                     <label>Town / City <span class="required">*</span></label>
-                                    <input name="City" type="text">
+                                        <input name="City" type="text" required>
                                 </div>
                             </div>
                           @*   <div class="col-md-6">
@@ -64,12 +64,12 @@
                                     <input placeholder="" type="text">
                                 </div>
                             </div> *@
-                            <div class="col-md-6">
+                           @*  <div class="col-md-6">
                                 <div class="checkout-form-list">
                                     <label>Postcode / Zip <span class="required">*</span></label>
                                     <input name="PostalCode" placeholder="" type="text">
                                 </div>
-                            </div>
+                            </div> *@
 @*                             <div class="col-md-6">
                                 <div class="checkout-form-list">
                                     <label>Email Address <span class="required">*</span></label>
@@ -79,7 +79,7 @@
                             <div class="col-md-6">
                                 <div class="checkout-form-list">
                                     <label>Phone  <span class="required">*</span></label>
-                                    <input name="Phone" type="text">
+                                        <input name="Phone" type="text" required>
                                 </div>
                             </div>
                         </div>
