--- a/simple-ecommerce/Views/Shared/_MyCart.cshtml
+++ b/simple-ecommerce/Views/Shared/_MyCart.cshtml
@@ -1,6 +1,6 @@
 ﻿@model CartSummaryViewModel
 
-
+<a asp-action="Index" asp-controller="Cart" class="nav-link">
     <div class="hm-minicart-trigger">
         <span class="item-icon"></span>
         <span class="item-text">
@@ -9,4 +9,4 @@
         </span>
 
     </div>
-
+</a>
