--- a/simple-ecommerce/Views/Shared/_Layout.cshtml
+++ b/simple-ecommerce/Views/Shared/_Layout.cshtml
@@ -99,6 +99,7 @@
                                                 
                                                 @if (User.Identity?.IsAuthenticated == true)
                                                 {
+                                                    <li><a href="/auth/ChangePassword">Change Password</a></li>
                                                     <li><a href="/auth/Logout">Sign Out</a></li>
                                                 }
                                                 else
