--- a/simple-ecommerce/Views/Product/Create.cshtml
+++ b/simple-ecommerce/Views/Product/Create.cshtml
@@ -7,7 +7,7 @@
 
 
 
-<form asp-action="Create" method="post">
+<form asp-action="Create" method="post" enctype="multipart/form-data">
     <div class="row">
 
         <div class="col-md-6 mb-3">
@@ -41,7 +41,7 @@
 
         <div class="col-md-4 mb-3">
             <label>Image URL</label>
-            <input asp-for="Product.ImageUrl" class="form-control" />
+            <input asp-for="Product.Image" class="form-control" type="file" />
         </div>
 
         <div class="col-md-4 mb-3">
