--- a/simple-ecommerce/Views/Home/ProductDetails.cshtml
+++ b/simple-ecommerce/Views/Home/ProductDetails.cshtml
@@ -9,9 +9,9 @@
                 <div class="product-details-left">
                     <div class="product-details-images slider-navigation-1">
                         <div class="lg-image">
-                            <a class="popup-img venobox vbox-item" href="images/product/large-size/1.jpg" data-gall="myGallery">
-                                <img src="images/product/large-size/1.jpg" alt="product image">
-                            </a>
+@*                             <a class="popup-img venobox vbox-item" href="images/product/large-size/1.jpg" data-gall="myGallery"> *@
+                            <img src="/images/products/@Model.ImageUrl" alt="product image">
+@*                             </a> *@
                         </div>
 
                     </div>
